--- a/src/modules/calendar/components/CalBody/calBody.scss
+++ b/src/modules/calendar/components/CalBody/calBody.scss
@@ -1,2 +1,8 @@
-@import '../../assets/style/theme.scss';
+// @import '../../assets/style/theme.scss';
+// @import '../../assets/style/mixin.scss';
 
+.calbody-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
