--- a/src/modules/calendar/components/calBody/shelf/shelf.scss
+++ b/src/modules/calendar/components/calBody/shelf/shelf.scss
@@ -1,13 +1,12 @@
 @import '../../../assets/style/theme.scss';
 @import '../../../assets/style/mixin.scss';
 
-$calBodyShelfWidth: 260px;
-$calBodyShelfCreatePanelHeight: 70px;
 
 .calbody-shelf-container {
     position: relative;
     width: $calBodyShelfWidth;
     height: 100%;
+    flex-shrink: 0;  //不缩小
 
     &__createWrapper {
         position: relative;
@@ -43,5 +42,27 @@ $calBodyShelfCreatePanelHeight: 70px;
     &__main {
         height: calc(100% - #{$calBodyShelfCreatePanelHeight});
         overflow-y: auto;
+        overflow-x: hidden;
+        &::-webkit-scrollbar {
+            width: 10px;
+            background: transparent;
+        }
+        
+        &::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+            background: $appFrameBorderColor;
+            border-radius: 5px;
+        }
+        
+        &::-webkit-scrollbar-button:start {
+            display: none;
+        }
+        
+        &::-webkit-scrollbar-button:end {
+            display: none;
+        }  
     }
 }
