--- a/src/modules/calendar/components/calBody/calContent/calContent.scss
+++ b/src/modules/calendar/components/calBody/calContent/calContent.scss
@@ -1,7 +1,7 @@
 
 @import '../../../assets/style/theme.scss';
 
-$calContentContainerPadding: 12px 10px 0 10px;
+$calContentContainerPadding: 12px 0 0 0;
 
 .calbody-content-container {
     position: relative;
