--- a/src/modules/calendar/components/calBody/calContent/common/singleHourGrid/singleHourGrid.scss
+++ b/src/modules/calendar/components/calBody/calContent/common/singleHourGrid/singleHourGrid.scss
@@ -10,4 +10,9 @@
   &.is-first {
     border-top: 1px solid $appFrameBorderColor;
   }
+
+  &__minSplitter {
+    position: relative;
+    width: 100%;
+  }
 }
