--- a/src/modules/calendar/components/CalBody/calContent/common/singleDayHeader/header.scss
+++ b/src/modules/calendar/components/CalBody/calContent/common/singleDayHeader/header.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     width: 100%;
     height: $calBodyContentColumnLayoutHeaderHeight;
+    padding-top: 12px;
 
     &.is-left {
         align-items: flex-start;
