--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -29,9 +29,12 @@ $calBodyShelfCreatePanelHeight: 70px; // body shelf create panel height;
 
 $calBodyLinkSideBarWidth: 60px; // body linksidebar width;
 
-$calBodyContentColumnLayoutHeaderHeight: 70px; // main body header height
+$calBodyContentColumnLayoutHeaderHeight: 80px; // main body header height
 $calBodyContentColumnLayoutSideWidth: 60px; // main body sidebar timeline width;
 $calBodyContentColumnLayoutPlaceholderLineWidth: 6px; // 左侧突出线头的长度
+
+$calBodyContentMonthLayoutHeaderHeight: 30px;
+$calBodyContentMonthLayoutSideWidth: 30px; // main body sidebar weekline width;
 
 // $singleHourGridMinHeight: 40px;
 $singleHourGridMaxHeight: 48px;
