--- a/src/modules/calendar/components/calBody/calContent/calContent.scss
+++ b/src/modules/calendar/components/calBody/calContent/calContent.scss
@@ -1,11 +1,11 @@
 
 @import '../../../assets/style/theme.scss';
 
-$calContentContainerPadding: 12px 0 0 0;
+// $calContentContainerPadding: 12px 0 0 0;
 
 .calbody-content-container {
     position: relative;
     height: 100%; 
     flex-grow: 1; //瓜分所有剩余空间
-    padding: $calContentContainerPadding;
+    // padding: $calContentContainerPadding;
 }
