fix and optimize week calc algorithm

--- a/src/modules/calendar/components/CalBody/calContent/monthLayout/monthLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/monthLayout/monthLayout.scss
@@ -29,10 +29,12 @@
     width: 100%;
     display: flex;
     flex-basis: $calBodyContentMonthLayoutHeaderHeight;
+    line-height: $calBodyContentMonthLayoutHeaderHeight;
     flex-shrink: 0;
 
     &--item {
       flex-grow: 1;
+      font-size: $fontSizeSmall;
       &:not(:last-child) {
         border-right: 1px solid $appFrameBorderColor;
       }
