--- a/src/modules/calendar/components/CalBody/calContent/monthLayout/monthLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/monthLayout/monthLayout.scss
@@ -35,6 +35,7 @@
     &--item {
       flex-grow: 1;
       font-size: $fontSizeSmall;
+      color: $fontSubTitleColor;
       &:not(:last-child) {
         border-right: 1px solid $appFrameBorderColor;
       }
