--- a/src/modules/calendar/components/CalBody/calContent/common/singleDayGrid/singleDayGrid.scss
+++ b/src/modules/calendar/components/CalBody/calContent/common/singleDayGrid/singleDayGrid.scss
@@ -1,5 +1,38 @@
 @import '../../../../../assets/style/theme.scss';
+@import '../../../../../assets/style/mixin.scss';
+
+$singleGridValueMinHeight: 33px;
 
 .singleday-grid-container {
-    
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden; // important
+
+    &-showValue {
+        width: 100%;
+        height: $singleGridValueMinHeight;
+        color: $fontColor;
+        font-size: 12px;
+        font-weight: 500;
+
+        &.is-today {
+            & .showValue__base {
+                @include circle-bg($singleDayGridTodayBgColor);
+            }
+        }
+        &.is-grey {
+            color: $fontSubTitleColor;
+        }
+        &.is-selected:not(.is-today) {
+            & .showValue__base {
+                @include circle-bg($singleDayGridSelectedBgColor);
+            }
+        }
+        &.is-disabled {
+            color: $fontSubTitleColor;
+            user-select: none;
+        }
+    }
 }
