--- a/src/modules/calendar/assets/style/mixin.scss
+++ b/src/modules/calendar/assets/style/mixin.scss
@@ -44,6 +44,15 @@
   }
 }
 
-@mixin circle-bg($bgColor: #EEEDED) {
+@mixin circle-bg( $bgColor: #eeeded, $textColor: #fff, $dimension: 100%) {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: $dimension;
+  height: $dimension;
   border-radius: 50%;
+  background-color: $bgColor;
+  color: $textColor;
+  transition: background 0.3s linear;
 }
