--- a/src/modules/calendar/components/CalBody/calContent/common/singleDayGrid/singleDayGrid.scss
+++ b/src/modules/calendar/components/CalBody/calContent/common/singleDayGrid/singleDayGrid.scss
@@ -1,90 +1,96 @@
-@import '../../../../../assets/style/theme.scss';
-@import '../../../../../assets/style/mixin.scss';
+@import "../../../../../assets/style/theme.scss";
+@import "../../../../../assets/style/mixin.scss";
 
 $singleGridValueMinHeight: 28px;
 $circleDimension: 25px;
 $calEventBodyHeight: 20px;
-$calEventBodyEndLeftPadding: 20px;
+$calEventBodyEndLeftPadding: 13px;
+$calEventBorderRadius: 4px;
 
 .singleday-grid-container {
-    position: relative;
-    width: 100%;
+  position: relative;
+  width: 100%;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // overflow: hidden; // important
+
+  &-showValue {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    overflow: hidden; // important
+    justify-content: center;
+    width: 100%;
+    height: $singleGridValueMinHeight;
+    color: $fontColor;
+    font-size: 12px;
+    font-weight: 500;
+    cursor: pointer;
 
-    &-showValue {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: $singleGridValueMinHeight;
-        color: $fontColor;
-        font-size: 12px;
-        font-weight: 500;
-        cursor: pointer;
-
-        & .showValue__base:hover {
-            @include circle-bg($hoverBgColor, $fontColor, $circleDimension);
-        }
-
-        &.is-today {
-            & .showValue__base {
-                @include circle-bg(
-                    $singleDayGridTodayBgColor,
-                    #fff,
-                    $circleDimension
-                );
-            }
-        }
-
-        &.is-grey {
-            color: $fontSubTitleColor;
-        }
-
-        &.is-selected:not(.is-today) {
-            & .showValue__base {
-                @include circle-bg(
-                    $singleDayGridSelectedBgColor,
-                    #fff,
-                    $circleDimension
-                );
-            }
-        }
-        &.is-disabled {
-            color: $fontSubTitleColor;
-            user-select: none;
-        }
+    & .showValue__base:hover {
+      @include circle-bg($hoverBgColor, $fontColor, $circleDimension);
     }
 
-    &-calEvent {
-        width: 100%;
-        height: $singleGridValueMinHeight;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &__body {
-            width: 100%;
-            height: $calEventBodyHeight;
-            text-align: left;
-
-            &.is-start {
-                border-top-left-radius: 4px;
-                border-bottom-left-radius: 4px;
-            }
-            &.is-end {
-                padding-left: $calEventBodyEndLeftPadding;
-            }
-        }
-
-        &__title {
-            line-height: $calEventBodyHeight;
-            color: #fff;
-            font-size: 12px;
-            font-weight: 500;
-            user-select: none;
-        }
+    &.is-today {
+      & .showValue__base {
+        @include circle-bg($singleDayGridTodayBgColor, #fff, $circleDimension);
+      }
     }
+
+    &.is-grey {
+      color: $fontSubTitleColor;
+    }
+
+    &.is-selected:not(.is-today) {
+      & .showValue__base {
+        @include circle-bg($singleDayGridSelectedBgColor, #fff, $circleDimension);
+      }
+    }
+    &.is-disabled {
+      color: $fontSubTitleColor;
+      user-select: none;
+    }
+  }
+
+  &-calEvent {
+    position: absolute;
+    left: 0px;
+    right: -1px;
+    height: $singleGridValueMinHeight;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & .calEvent__body {
+      width: 100%;
+      height: $calEventBodyHeight;
+      text-align: left;
+      //   box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px -1px rgba(0,0,0,0.2);
+    }
+
+    &.is-start {
+      & .calEvent__body {
+        border-top-left-radius: $calEventBorderRadius;
+        border-bottom-left-radius: $calEventBorderRadius;
+      }
+    }
+
+    &.is-end {
+      right: $calEventBodyEndLeftPadding;
+
+      & .calEvent__body {
+        border-top-right-radius: $calEventBorderRadius;
+        border-bottom-right-radius: $calEventBorderRadius;
+      }
+    }
+
+    &__title {
+      line-height: $calEventBodyHeight;
+      color: #fff;
+      font-size: $fontSizeExtraSmall;
+      font-weight: 500;
+      user-select: none;
+      vertical-align: middle;
+      padding-left: 5px;
+    }
+  }
 }
