--- a/src/modules/calendar/components/CalBody/calContent/monthLayout/monthLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/monthLayout/monthLayout.scss
@@ -5,6 +5,9 @@
   width: 100%;
   height: 100%;
   display: flex;
+  &.is-ondragging * {
+    user-select: none;
+  }
 
   //   &  * {
   //       border: 1px solid black;
