work on handle drag for weekLayout, and init calEventDefiner layout

--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/calEventDefinePanel.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/calEventDefinePanel.scss
@@ -1,7 +1,12 @@
-$calEventDefinerPanelPaddingTop: 30px;
+$calEventDefinerPanelPadding: 30px 10px 10px 10px;
+$titleContainerHeight: 50px;
 
 .calevent-definer-panel {
   position: relative;
   width: 100%;
-  padding-top: $calEventDefinerPanelPaddingTop;
+  padding: $calEventDefinerPanelPadding;
+  &__title {
+    width: 100%;
+    height: $titleContainerHeight;
+  }
 }
