--- a/src/modules/calendar/components/CalBody/calContent/common/calEventPop/calEventPop.scss
+++ b/src/modules/calendar/components/CalBody/calContent/common/calEventPop/calEventPop.scss
@@ -6,6 +6,7 @@
     border-radius: 4px;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
         0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
+    user-select: none;
 
     &.is-dragging {
         width: 97%;
@@ -23,6 +24,5 @@
 
     &__title {
       margin: 0 12px;
-      // max-height: 30px;
     }
 }
