--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -7,6 +7,7 @@ $fontSizeGrand: $fontSizeBasic * 1.5;
 
 /* color */
 $fontColor: #3c4043;
+$optionFontColor: #5f6368;
 $appFrameBorderColor: #dadce0; // app主体框架的border color
 $appScrollBarColor: darken(#dadce0, 10%);
 $fontSubTitleColor: #70757a;
@@ -44,6 +45,9 @@ $calBodyContentMonthLayoutSideWidth: 23px; // main body sidebar weekline width;
 
 $singleHourGridMaxHeight: 48px;
 
+$calEventDefinerLeftOffset: 50px;
+$calEventDefinerOptionHeight: 35px;
+
 .btn {
     border-radius: $btnBorderRadius;
     border: 1px solid $appFrameBorderColor;
@@ -66,6 +70,13 @@ a {
 
 .is-ellipse {
     border-radius: 30px;
+}
+
+.is-separator {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: $appFrameBorderColor;
 }
 
 .font-subtitle {
@@ -99,4 +110,23 @@ a {
 
 .no-uselect {
     user-select: none;
+}
+
+.btn {
+    border-radius: 4px;
+    font-size: $fontSizeBasic;
+    line-height: 36px;
+    font-weight: 500;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: background 0.2s ease-in;
+    outline: none;
+
+    &.is-inform {
+        background: #1a73e8;
+        color: #fff;
+        &:hover {
+            background: lighten(#1a73e8, 10%);
+        }
+    }
 }
