--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/activityDefiner/activityDefiner.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/activityDefiner/activityDefiner.scss
@@ -41,7 +41,7 @@
         }
         & input {
             font-size: $fontSizeBasic;
-            padding-left: 10px;
+            padding-left: $calEventDefinerOptionMainLeftPadding;
         }
 
         & .grey-border {
