work on close icon (UI only) for calEventDefinerPanel

--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/calEventDefinePanel.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/calEventDefinePanel.scss
@@ -1,7 +1,7 @@
 @import '../../../../assets/style/theme.scss';
 @import '../../../../assets/style/mixin.scss';
 
-$calEventDefinerPanelPadding: 30px 10px 10px 10px;
+$calEventDefinerPanelPadding: 0 10px 10px 10px;
 $titleContainerHeight: 35px;
 $actionContainerHeight: 60px;
 
