finalize time range displayer logic.

--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/reminderDefiner/repeatPicker/repeatPicker.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/reminderDefiner/repeatPicker/repeatPicker.scss
@@ -11,6 +11,7 @@ $optionsWidth: 170px;
   height: 100%;
   display: flex;
   align-items: center;
+  color: #3c4043;
 
   &__trigger {
     padding-right: 8px;
