--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -52,7 +52,7 @@ $calEventDefinerOptionMainLeftPadding: 10px;
   border-radius: $btnBorderRadius;
   border: 1px solid $appFrameBorderColor;
   font-size: $fontSizeBasic;
-  font-weight: 500;
+  // font-weight: 500;
   letter-spacing: 0.25px;
   outline: none;
   cursor: pointer;
