add weekline option for `datePicker` (by default 'yes'), created confirm modal

--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -30,7 +30,7 @@ $logoFlexBasis: 200px;
 $dateDisplayerFlexBasis: 282px;
 $layoutPickerFlexBasis: 180px;
 
-$calBodyShelfWidth: 280px; // body shelf width;
+$calBodyShelfWidth: 260px; // body shelf width;
 $calBodyShelfCreatePanelHeight: 70px; // body shelf create panel height;
 
 $calBodyLinkSideBarWidth: 60px; // body linksidebar width;
@@ -120,6 +120,10 @@ a {
 
 .is-grey {
   color: $fontSubTitleColor;
+}
+
+.is-blue {
+  color:  $singleDayGridTodayBgColor;
 }
 
 .is-lighter-gey {
