--- a/src/_packages_/components/datePicker/components/DatePickerPanel/DatePickerPanel.scss
+++ b/src/_packages_/components/datePicker/components/DatePickerPanel/DatePickerPanel.scss
@@ -1,4 +1,4 @@
-$calendar-body-width: 240px;
+$calendar-body-width: 210px;
 
 .bxu-pickerpanel-container {
   position: relative;
@@ -16,13 +16,35 @@ $calendar-body-width: 240px;
   }
 
   & .calendar-body {
-    & .mondata-row-wrapper .row-data-container {
-      position: relative;
+
+    & .row-data-container {
       display: flex;
-      justify-content: center;
-      & .simple-calgrid-container {
-        width: $calendar-body-width / 7;
-        height: $calendar-body-width / 7;
+
+      &--week {
+        flex-basis: 20px;
+        flex-grow: 0;
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 11px;
+        font-weight: 600;
+        background: #f1f3f4;
+      }
+
+      &--main {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        flex-grow: 1;
+        & .simple-calgrid-container {
+          width: $calendar-body-width / 7;
+          height: $calendar-body-width / 7;
+        }
+      }
+
+      &.is-header .row-data-container--week {
+        background: #fff;
       }
     }
   }
