--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPop/calEventDefinerPop.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPop/calEventDefinerPop.scss
@@ -44,6 +44,15 @@ $bodyMaxHeight: 360px;
       }
     }
   }
+}
 
-
+.cal-confirm-panel-wrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
